--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -10,6 +10,5 @@
   <% end %>
 </ul>
 
-<%= link_to "Add a bookmark", new_list_bookmark_path(@list), class: "btn btn-primary" %>
-
-<%= link_to "Back to all lists", lists_path, class: "btn btn-secondary" %>
+<%= link_to "Add a bookmark", new_list_bookmark_path(@list), class: "btn btn-primary" %> |
+<%= link_to "Back to all lists", lists_path %>
